#1287 - ClipFlair Social - fix for menu popup to show above Studio and Gallery buttons in case they wrap under the menubar

--- a/Server/ClipFlair.Social/App_Themes/ClipFlair/Default.css
+++ b/Server/ClipFlair.Social/App_Themes/ClipFlair/Default.css
@@ -2755,6 +2755,7 @@ span.level0-wrapper
     position:absolute;
     top: 15px;
     left: -8px;
+    z-index:100;	
     /*/!!!*/
 }
 NAV UL UL
